hphp/hack/test/typecheck/reified_generics/box_function_arity.php.exp
File "box_function_arity.php", line 8, characters 12-17:
The type C expects 2 type parameter(s) (Typing[4101])
